# medreg

./: .gitignore  README.md  pyproject.toml
medreg/: cli.py
medreg/adapters/: __init__.py  base.py  de.py  fr.py  pl.py
medreg/utils/: http.py
