[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medreg"
version = "0.1.0"
description = "CLI to search national drug registries (SmPC/SPC) by country"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "you@example.com"}]
dependencies = [
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "lxml>=5.2",
  "charset-normalizer>=3.3",
]

[project.optional-dependencies]
browser = [
  "playwright>=1.47",
]

[project.scripts]
medreg = "medreg.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["medreg"]